# generative-modeling

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bayes_classifier/: bayes_classifier_gaussian.py  bayes_classifier_gmm.py
src/vae/: vae.py
tests/: test_gaussian_sampler.py  test_gmm_sampler.py
