[tool.poetry]
name = "generative-modeling"
version = "0.1.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
scikit-learn = "^0.22.1"
matplotlib = "^3.1.3"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pdbpp = "^0.10.2"
ipython = "^7.12.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
