[tool.poetry]
name = "generative-modeling"
version = "1.0.0"
description = ""
authors = ["Gilbert Francois Duivesteijn <info@gilbertfrancois.com>"]
license = "Apache"
readme = "README.md"
packages = [{include = "generative_modeling"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
scikit-learn = "^1.2.1"
matplotlib = "^3.7.1"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
pytest = "^7.2.2"
pylint = "^2.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
